Update Go client for API v1.0.0-beta.16
Auto-generated from devgraph@d13df8edbf9ac4ba5907823196f484c7b121493d
Spec URL: https://github.com/arctir/devgraph-api/tree/v1.0.0-beta.16
