# pkg/apis/devgraph/v1/oas_response_encoders_gen.go
@@ -1319,16 +1319,9 @@ func encodeDeleteOAuthServiceResponse(response DeleteOAuthServiceRes, w http.Res
 
 func encodeDeletePromptResponse(response DeletePromptRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
-	case *DeletePromptOKApplicationJSON:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
+	case *DeletePromptNoContent:
+		w.WriteHeader(204)
+		span.SetStatus(codes.Ok, http.StatusText(204))
 
 		return nil
 
